--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-app",
+  "name": "GH-GPT",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -32,13 +32,14 @@
     "glob": "^11.0.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "next-themes": "^0.4.6",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-firebase-hooks": "^5.1.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.17.0",
