--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GH-GPT",
+  "name": "gh-gpt",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -12,8 +12,6 @@
   },
   "dependencies": {
     "@chakra-ui/hooks": "^2.4.2",
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^3.3.1",
     "@chakra-ui/theme": "^3.4.6",
     "@chakra-ui/theme-tools": "^2.2.6",
     "@emotion/react": "^11.14.0",
@@ -21,7 +19,7 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.7",
-    "axios": "^1.7.9",
+    "axios": "^1.10.0",
     "chalk": "^5.4.1",
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.1.1",
@@ -67,5 +65,18 @@
     "tailwindcss": "^3.4.16",
     "vite": "^6.0.3",
     "workbox-cli": "^7.3.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abakahjay/Instagrams.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/abakahjay/Instagrams/issues"
+  },
+  "homepage": "https://github.com/abakahjay/Instagrams#readme"
 }
