--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@chakra-ui/hooks": "^2.4.2",
-    "@chakra-ui/theme": "^3.4.6",
+    "@chakra-ui/icons": "^2.0.18",
+    "@chakra-ui/react": "^2.8.1",
     "@chakra-ui/theme-tools": "^2.2.6",
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@radix-ui/react-icons": "^1.3.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.62.7",
@@ -26,7 +26,7 @@
     "cropperjs": "^1.6.2",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^10.12.16",
     "glob": "^11.0.1",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -41,7 +41,9 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.17.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^11.0.2",
+    "react-type-animation": "^3.2.0",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
     "vite-plugin-pwa": "^0.21.1",
